adding cheat sheet

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,6 +71,7 @@ bind-key l select-pane -R
 # plugin list
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'jaclu/tmux-menus'
 
 # session recovery: (save) <leader> C-s (restore) <leader C-r
 # to check if save worked - tmux kill-server && tmux ls && tmux - restore
