elaborating status bar configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,11 +82,17 @@ set -g @resurrect-strategy-vim 'session' # resore vim session - check compatibil
 # status bar
 set -g @plugin 'dracula/tmux'
 
+set -g @dracula-plugins "git ram-usage network attached-clients time spotify-tui"
+set -g @dracula-refresh-rate 1
 set -g @dracula-show-powerline false
+set -g @dracula-ram-usage-label "RAM"
 set -g @dracula-fixed-location "London"
-set -g @dracula-plugins "weather"
-set -g @dracula-show-flags true
+set -g @dracula-day-month true
+set -g @dracula-git-show-current-symbol ✓
 set -g @dracula-show-left-icon session
+set -g @dracula-show-powerline false
+set -g @dracula-show-flags true
+
 set -g status-position bottom
 
 # initialize tmux plugin manager (always keep at bottom of the file)
