--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,9 @@ bind-key l select-pane -R
 # --------------------------------------------------------------------- #
 
 # plugin list
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'jaclu/tmux-menus'
@@ -77,7 +80,12 @@ set -g @plugin 'jaclu/tmux-menus'
 # to check if save worked - tmux kill-server && tmux ls && tmux - restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-set -g @resurrect-strategy-vim 'session' # resore vim session - check compatibility with neovim/chad
+# vim & nvim recovery:
+set -g @plugin 'tpope/vim-obsession'
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
 
 # status bar
 set -g @plugin 'dracula/tmux'
